Hoàn thành phần tác giả và thể loại

--- a/QLTV/QLTV/QLTV.csproj
+++ b/QLTV/QLTV/QLTV.csproj
@@ -49,10 +49,14 @@
     <Compile Include="DAO\DataProvider.cs" />
     <Compile Include="DAO\SachDAO.cs" />
     <Compile Include="DAO\SangTacDAO.cs" />
+    <Compile Include="DAO\TacGiaDAO.cs" />
+    <Compile Include="DAO\TheLoaiDAO.cs" />
     <Compile Include="DTO\MASACH_DTO.cs" />
     <Compile Include="DTO\MATG_DTO.cs" />
     <Compile Include="DTO\SachDTO.cs" />
     <Compile Include="DTO\SangTacDTO.cs" />
+    <Compile Include="DTO\TacGiaDTO.cs" />
+    <Compile Include="DTO\TheLoaiDTO.cs" />
     <Compile Include="GUI\Menu.cs">
       <SubType>Form</SubType>
     </Compile>
